--- a/package.json
+++ b/package.json
@@ -22,18 +22,19 @@
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "mdsvex": "^0.10.6",
     "postcss": "^8.4.23",
     "postcss-load-config": "^4.0.1",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.8.1",
+    "rehype-add-classes": "^1.0.0",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
     "svelte-preprocess": "^5.0.3",
     "tailwindcss": "^3.3.1",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.2.0",
-    "mdsvex": "^0.10.6"
+    "vite": "^4.2.0"
   },
   "type": "module"
 }
