--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.8.1",
     "rehype-add-classes": "^1.0.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "^5.1.0",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
     "svelte-preprocess": "^5.0.3",
