--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-static": "^2.0.2",
     "@sveltejs/kit": "^1.5.0",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/minimatch": "^5.1.2",
     "@types/node": "^20.1.4",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -31,9 +32,6 @@
     "postcss-load-config": "^4.0.1",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.8.1",
-    "rehype-add-classes": "^1.0.0",
-    "rehype-autolink-headings": "^6.1.1",
-    "rehype-slug": "^5.1.0",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
     "svelte-preprocess": "^5.0.3",
