--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "vite dev",
-    "build": "npm run build:posts && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write .",
-    "build:posts": "node buildPosts.js"
+    "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
     "@skeletonlabs/skeleton": "^1.5.1",
@@ -20,12 +19,15 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/minimatch": "^5.1.2",
     "@types/node": "^20.1.4",
+    "@types/yaml-front-matter": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "fast-glob": "^3.3.0",
+    "highlight.js": "^11.8.0",
     "mdsvex": "^0.10.6",
     "minimatch": "^9.0.1",
     "postcss": "^8.4.23",
@@ -34,11 +36,14 @@
     "prettier-plugin-svelte": "^2.8.1",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
+    "svelte-exmarkdown": "^2.1.0",
     "svelte-preprocess": "^5.0.3",
     "tailwindcss": "^3.3.1",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.2.0"
+    "unist-util-visit": "^5.0.0",
+    "vite": "^4.2.0",
+    "yaml-front-matter": "^4.1.1"
   },
   "type": "module"
 }
