--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
+    "@auth/core": "^0.9.0",
+    "@auth/sveltekit": "^0.3.5",
+    "@floating-ui/dom": "^1.4.5",
     "@skeletonlabs/skeleton": "^1.5.1",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-static": "^2.0.2",
