--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-static": "^2.0.2",
     "@sveltejs/kit": "^1.5.0",
+    "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.9",
     "@types/minimatch": "^5.1.2",
     "@types/node": "^20.1.4",
