--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-svelte3": "^4.0.0",
     "fast-glob": "^3.3.0",
     "highlight.js": "^11.8.0",
+    "js-yaml": "^4.1.0",
     "postcss": "^8.4.23",
     "postcss-load-config": "^4.0.1",
     "prettier": "^2.8.0",
