--- a/package.json
+++ b/package.json
@@ -11,12 +11,21 @@
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
     "format": "prettier --plugin-search-dir . --write ."
   },
-  "devDependencies": {
+  "dependencies": {
     "@auth/core": "^0.9.0",
     "@auth/sveltekit": "^0.3.5",
     "@floating-ui/dom": "^1.4.5",
     "@skeletonlabs/skeleton": "^1.5.1",
-    "@sveltejs/adapter-auto": "^2.0.0",
+    "easymde": "^2.18.0",
+    "fast-glob": "^3.3.0",
+    "highlight.js": "^11.8.0",
+    "js-yaml": "^4.1.0",
+    "rehype-raw": "^6.1.1",
+    "unist-util-visit": "^5.0.0",
+    "yaml-front-matter": "^4.1.1"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-node": "^1.3.1",
     "@sveltejs/adapter-static": "^2.0.2",
     "@sveltejs/kit": "^1.5.0",
     "@tailwindcss/forms": "^0.5.4",
@@ -27,18 +36,13 @@
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "autoprefixer": "^10.4.14",
-    "easymde": "^2.18.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
-    "fast-glob": "^3.3.0",
-    "highlight.js": "^11.8.0",
-    "js-yaml": "^4.1.0",
     "postcss": "^8.4.23",
     "postcss-load-config": "^4.0.1",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.8.1",
-    "rehype-raw": "^6.1.1",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
     "svelte-exmarkdown": "^2.1.0",
@@ -46,9 +50,7 @@
     "tailwindcss": "^3.3.1",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "unist-util-visit": "^5.0.0",
-    "vite": "^4.2.0",
-    "yaml-front-matter": "^4.1.1"
+    "vite": "^4.2.0"
   },
   "type": "module"
 }
