move all envs to .env

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,9 @@ GITHUB_SECRET=
 # Signed-in emails that are considered admins, separated by comma.
 # Admin users can create, edit, and delete posts.
 ADMINS=a@example.com,b@example.com
+
+# Production server settings
+# [https://kit.svelte.dev/docs/adapter-node#environment-variables] for more information.
+HOST=0.0.0.0
+PORT=3000
+ORIGIN=http://localhost:3000
