--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@auth/core": "^0.9.0",
     "@auth/sveltekit": "^0.3.5",
     "@floating-ui/dom": "^1.4.5",
+    "@inqling/svelte-icons": "^3.4.3",
     "@skeletonlabs/skeleton": "^1.5.1",
     "easymde": "^2.18.0",
     "fast-glob": "^3.3.0",
