text content to env

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,23 @@ ADMINS=a@example.com,b@example.com
 HOST=0.0.0.0
 PORT=3000
 ORIGIN=http://localhost:3000
+
+# Display text
+PUBLIC_BAR_PRE="新樓醫院心臟科附屬"
+PUBLIC_BAR_NAME="電機社"
+
+PUBLIC_TITLE="電機社～新樓醫院心臟科"
+PUBLIC_DESC="Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat."
+
+# Info is markdown-formatted
+PUBLIC_INFO="
+### 臺南一中電機社——開啟電機世界的夢想舞台！
+
+過去，我們以機器人社的身份活躍於校園，以樂高程式機器人為主要探索領域。
+<br />
+如今，**我們以嶄新面貌——電機社**，
+以電腦軟硬體和開發板相關教學和討論作為社團的核心，將啟動更繽紛的社團活動！
+
+和其他社團不同，我們的特色在於不僅局限於競程或網管等課程，而是專注於探索電腦資訊領域的各個角落，包羅萬象。
+無論你是對電腦軟體、硬體、電子產品還是零組件有著廣泛興趣，甚至只是對電機領域抱持好奇心的新手，我們都對你敞開大門，歡迎大家的加入！
+"
