--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@auth/sveltekit": "^0.3.6",
     "@floating-ui/dom": "^1.4.5",
-    "@inqling/svelte-icons": "^3.4.3",
     "@skeletonlabs/skeleton": "^1.5.1",
     "easymde": "^2.18.0",
     "fast-glob": "^3.3.0",
@@ -25,6 +24,7 @@
     "yaml-front-matter": "^4.1.1"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.1.54",
     "@sveltejs/adapter-node": "^1.3.1",
     "@sveltejs/adapter-static": "^2.0.2",
     "@sveltejs/kit": "^1.5.0",
@@ -50,6 +50,7 @@
     "tailwindcss": "^3.3.1",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
+    "unplugin-icons": "^0.16.5",
     "vite": "^4.2.0"
   },
   "type": "module"
