--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@auth/sveltekit": "^0.3.6",
     "@floating-ui/dom": "^1.4.5",
-    "@skeletonlabs/skeleton": "^1.5.1",
     "easymde": "^2.18.0",
     "fast-glob": "^3.3.0",
     "highlight.js": "^11.8.0",
@@ -25,13 +24,15 @@
   },
   "devDependencies": {
     "@iconify-json/mdi": "^1.1.54",
+    "@skeletonlabs/skeleton": "^2.0.0",
+    "@skeletonlabs/tw-plugin": "^0.1.0",
     "@sveltejs/adapter-node": "^1.3.1",
     "@sveltejs/adapter-static": "^2.0.2",
     "@sveltejs/kit": "^1.5.0",
     "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.9",
     "@types/minimatch": "^5.1.2",
-    "@types/node": "^20.1.4",
+    "@types/node": "^20.5.7",
     "@types/yaml-front-matter": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
