--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "unplugin-icons": "^0.16.5",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "vite-plugin-tailwind-purgecss": "^0.1.3"
   },
   "type": "module"
 }
