--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "highlight.js": "^11.8.0",
     "js-yaml": "^4.1.0",
     "rehype-raw": "^6.1.1",
+    "rehype-slug": "^6.0.0",
     "unist-util-visit": "^5.0.0",
     "yaml-front-matter": "^4.1.1"
   },
