--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "fast-glob": "^3.3.0",
     "highlight.js": "^11.8.0",
     "js-yaml": "^4.1.0",
+    "lru-cache": "^10.0.1",
     "rehype-raw": "^6.1.1",
     "rehype-slug": "^6.0.0",
+    "thunky": "^1.1.0",
     "unist-util-visit": "^5.0.0",
     "yaml-front-matter": "^4.1.1"
   },
@@ -34,6 +36,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/minimatch": "^5.1.2",
     "@types/node": "^20.5.7",
+    "@types/thunky": "^1.1.0",
     "@types/yaml-front-matter": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
