disable deploy workflow on pull_request

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,6 +54,7 @@ jobs:
           path: "build/"
 
   deploy:
+    if: ${{ github.event_name != 'pull_request' }}
     needs: build_site
     runs-on: ubuntu-latest
 
