--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@auth/sveltekit": "^0.3.6",
@@ -46,8 +46,9 @@
     "eslint-plugin-svelte3": "^4.0.0",
     "postcss": "^8.4.23",
     "postcss-load-config": "^4.0.1",
-    "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.8.1",
+    "prettier": "^3.0.3",
+    "prettier-plugin-svelte": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
     "svelte-exmarkdown": "^2.1.0",
