--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@auth/sveltekit": "^0.3.6",
     "@floating-ui/dom": "^1.4.5",
+    "@fontsource-variable/noto-sans-tc": "^5.0.3",
+    "@fontsource/noto-color-emoji": "^5.0.16",
     "easymde": "^2.18.0",
     "fast-glob": "^3.3.0",
     "highlight.js": "^11.8.0",
