--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@
 AUTH_SECRET=
 
 # If server doesn't run on Vercel, `AUTH_TRUST_HOST` needs to be true.
-# Enable this when running locally / prerendering
+# Enable this when running locally
 AUTH_TRUST_HOST=1
 
 # Github oauth app secrets.
