--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "dependencies": {
     "@auth/sveltekit": "^0.3.6",
-    "@floating-ui/dom": "^1.5.3",
     "easymde": "^2.18.0",
     "fast-glob": "^3.3.0",
     "highlight.js": "^11.9.0",
@@ -42,7 +41,7 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-svelte3": "^4.0.0",
+    "eslint-plugin-svelte": "^2.35.0",
     "postcss": "^8.4.23",
     "postcss-load-config": "^4.0.1",
     "prettier": "^3.1.0",
