--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@auth/sveltekit": "^0.3.6",
-    "easymde": "^2.18.0",
+    "carta-md": "^3.1.3",
     "fast-glob": "^3.3.0",
     "highlight.js": "^11.9.0",
     "js-yaml": "^4.1.0",
@@ -49,7 +49,6 @@
     "prettier-plugin-tailwindcss": "^0.5.4",
     "svelte": "^4.2.3",
     "svelte-check": "^3.6.0",
-    "svelte-exmarkdown": "^3.0.1",
     "svelte-preprocess": "^5.0.3",
     "svelte-sequential-preprocessor": "^2.0.1",
     "tailwindcss": "^3.3.1",
