--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@auth/sveltekit": "^0.3.6",
+    "@cartamd/plugin-code": "^3.0.1",
     "carta-md": "^3.1.3",
     "fast-glob": "^3.3.0",
     "highlight.js": "^11.9.0",
