--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "highlight.js": "^11.9.0",
     "js-yaml": "^4.1.0",
     "lru-cache": "^10.0.1",
+    "marked-footnote": "^1.1.3",
     "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
     "thunky": "^1.1.0",
