--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-svelte": "^2.35.0",
+    "marked": "^11.0.0",
     "postcss": "^8.4.23",
     "postcss-load-config": "^4.0.1",
     "prettier": "^3.1.0",
