--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check . && eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "typesafe-i18n": "typesafe-i18n"
   },
   "dependencies": {
     "@auth/sveltekit": "^0.3.6",
@@ -23,6 +24,7 @@
     "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
     "thunky": "^1.1.0",
+    "typesafe-i18n": "^5.26.2",
     "unist-util-visit": "^5.0.0",
     "yaml-front-matter": "^4.1.1"
   },
