--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "vite dev",
-    "build": "vite build",
+    "build": "paraglide-js compile --project ./project.inlang && vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write .",
-    "typesafe-i18n": "typesafe-i18n"
+    "postinstall": "paraglide-js compile --project ./project.inlang"
   },
   "dependencies": {
     "@auth/sveltekit": "^0.3.6",
@@ -24,12 +24,13 @@
     "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
     "thunky": "^1.1.0",
-    "typesafe-i18n": "^5.26.2",
     "unist-util-visit": "^5.0.0",
     "yaml-front-matter": "^4.1.1"
   },
   "devDependencies": {
     "@iconify-json/mdi": "^1.1.54",
+    "@inlang/paraglide-js": "1.0.0-prerelease.17",
+    "@inlang/paraglide-js-adapter-vite": "^1.0.1",
     "@melt-ui/pp": "^0.1.2",
     "@melt-ui/svelte": "^0.61.1",
     "@sveltejs/adapter-node": "^1.3.1",
