relocate inlang message routes

--- a/tnfshcec.inlang/settings.json
+++ b/tnfshcec.inlang/settings.json
@@ -1,9 +1,10 @@
 {
   "$schema": "https://inlang.com/schema/project-settings",
-  "sourceLanguageTag": "en",
+  "sourceLanguageTag": "zh-tw",
   "languageTags": [
     "en",
-    "zh-tw"
+    "zh-tw",
+    "ja"
   ],
   "modules": [
     "https://cdn.jsdelivr.net/npm/@inlang/message-lint-rule-empty-pattern@latest/dist/index.js",
@@ -14,6 +15,6 @@
     "https://cdn.jsdelivr.net/npm/@inlang/plugin-m-function-matcher@latest/dist/index.js"
   ],
   "plugin.inlang.messageFormat": {
-    "pathPattern": "./messages/{languageTag}.json"
+    "pathPattern": "./src/messages/{languageTag}.json"
   }
 }
