--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@auth/sveltekit": "^0.3.6",
     "@cartamd/plugin-code": "^3.0.1",
     "carta-md": "^3.1.3",
+    "emittery": "^1.0.1",
     "fast-glob": "^3.3.0",
     "highlight.js": "^11.9.0",
     "js-yaml": "^4.1.0",
