--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@auth/sveltekit": "^0.3.6",
+    "@auth/sveltekit": "^0.5.0",
     "@cartamd/plugin-code": "^3.0.1",
     "carta-md": "^3.1.3",
     "fast-glob": "^3.3.0",
@@ -29,8 +29,9 @@
     "@inlang/paraglide-js-adapter-vite": "^1.0.1",
     "@melt-ui/pp": "^0.1.2",
     "@melt-ui/svelte": "^0.61.1",
-    "@sveltejs/adapter-node": "^1.3.1",
-    "@sveltejs/kit": "^1.27.6",
+    "@sveltejs/adapter-node": "^2.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.9",
     "@types/minimatch": "^5.1.2",
@@ -57,8 +58,7 @@
     "tslib": "^2.4.1",
     "typescript": "^5.2.2",
     "unplugin-icons": "^0.17.4",
-    "vite": "^4.5.0",
-    "vite-plugin-tailwind-purgecss": "^0.1.3"
+    "vite": "^5.0.0"
   },
   "type": "module"
 }
