--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "@cartamd/plugin-code": "^3.0.1",
     "carta-md": "^3.1.3",
     "fast-glob": "^3.3.0",
-    "js-yaml": "^4.1.0",
+    "gray-matter": "^4.0.3",
     "lru-cache": "^10.0.1",
     "marked-footnote": "^1.1.3",
-    "thunky": "^1.1.0",
-    "yaml-front-matter": "^4.1.1"
+    "thunky": "^1.1.0"
   },
   "devDependencies": {
     "@iconify-json/mdi": "^1.1.54",
