--- a/package.json
+++ b/package.json
@@ -12,17 +12,6 @@
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write ."
   },
-  "dependencies": {
-    "@auth/sveltekit": "^0.5.0",
-    "@cartamd/plugin-code": "^3.0.1",
-    "carta-md": "^3.1.3",
-    "fast-glob": "^3.3.0",
-    "js-yaml": "^4.1.0",
-    "lru-cache": "^10.0.1",
-    "marked-footnote": "^1.1.3",
-    "thunky": "^1.1.0",
-    "yaml-front-matter": "^4.1.1"
-  },
   "devDependencies": {
     "@iconify-json/mdi": "^1.1.54",
     "@inlang/paraglide-js": "1.0.0-prerelease.17",
@@ -34,17 +23,15 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/minimatch": "^5.1.2",
     "@types/node": "^20.9.0",
     "@types/thunky": "^1.1.0",
-    "@types/yaml-front-matter": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-svelte": "^2.35.0",
-    "marked": "^11.0.0",
+    "mdsvex": "^0.11.0",
     "postcss": "^8.4.23",
     "postcss-load-config": "^5.0.2",
     "prettier": "^3.1.0",
