--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@auth/sveltekit": "^0.5.0",
     "@cartamd/plugin-code": "^3.0.1",
+    "bits-ui": "^0.15.1",
     "carta-md": "^3.1.3",
     "fast-glob": "^3.3.0",
     "js-yaml": "^4.1.0",
