--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
     // "i18n-ally.namespace": true,
     // "i18n-ally.pathMatcher": "{locale}/{namespaces}.{ext}",
     "i18n-ally.enabledParsers": ["ts", "json"],
-    "i18n-ally.sourceLanguage": "en",
+    "i18n-ally.sourceLanguage": "zh-tw",
     "i18n-ally.displayLanguage": "en",
     "i18n-ally.enabledFrameworks": ["svelte"]
   }
