update packages to fix things

--- a/package.json
+++ b/package.json
@@ -26,13 +26,12 @@
   },
   "devDependencies": {
     "@iconify-json/mdi": "^1.1.54",
-    "@inlang/paraglide-js": "1.0.0-prerelease.17",
+    "@inlang/paraglide-js": "1.2.1",
     "@inlang/paraglide-js-adapter-sveltekit": "^0.3.2",
-    "@inlang/paraglide-js-adapter-vite": "^1.0.1",
     "@melt-ui/pp": "^0.3.0",
     "@melt-ui/svelte": "^0.67.0",
     "@sveltejs/adapter-node": "^2.0.0",
-    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/kit": "^2.3.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.9",
