--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "prettier": "^3.1.0",
     "prettier-plugin-svelte": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.4",
+    "prism-themes": "^1.9.0",
+    "rehype-external-links": "^3.0.0",
+    "remark-footnotes": "^4.0.1",
     "svelte": "^4.2.3",
     "svelte-check": "^3.6.0",
     "svelte-preprocess": "^5.0.3",
@@ -46,6 +49,7 @@
     "tailwindcss": "^3.3.1",
     "tslib": "^2.4.1",
     "typescript": "^5.2.2",
+    "unist-util-visit": "^5.0.0",
     "unplugin-icons": "^0.18.1",
     "vite": "^5.0.0"
   },
