--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@inlang/paraglide-js-adapter-sveltekit": "^0.3.2",
     "@melt-ui/pp": "^0.3.0",
     "@melt-ui/svelte": "^0.67.0",
-    "@sveltejs/adapter-node": "^2.0.0",
+    "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.3.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/forms": "^0.5.4",
