--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "remark-footnotes": "^4.0.1",
     "svelte": "^4.2.3",
     "svelte-check": "^3.6.0",
+    "svelte-meta-tags": "^3.1.0",
     "svelte-preprocess": "^5.0.3",
     "svelte-sequential-preprocessor": "^2.0.1",
     "tailwindcss": "^3.3.1",
