fix getting incorrect origin

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
 
       - name: build
         env:
+          ORIGIN: "https://tnfshcec.com"
           # BASE_PATH: "/${{ github.event.repository.name }}"
         run: |
           npm run build
