--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@inlang/paraglide-js-adapter-sveltekit": "^0.3.2",
     "@melt-ui/pp": "^0.3.0",
     "@melt-ui/svelte": "^0.71.1",
+    "@shikijs/twoslash": "^1.1.0",
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.3.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -42,6 +43,7 @@
     "prism-themes": "^1.9.0",
     "rehype-external-links": "^3.0.0",
     "remark-footnotes": "^2.0.0",
+    "shiki": "^1.1.0",
     "svelte": "^4.2.3",
     "svelte-check": "^3.6.0",
     "svelte-meta-tags": "^3.1.0",
