setup shiki transformers and styling

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@inlang/paraglide-js-adapter-sveltekit": "^0.3.2",
     "@melt-ui/pp": "^0.3.0",
     "@melt-ui/svelte": "^0.71.1",
+    "@shikijs/transformers": "^1.1.1",
     "@shikijs/twoslash": "^1.1.0",
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.3.0",
