--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "npm run build:i18n && vite build",
     "build:i18n": "paraglide-js compile --project ./tnfshcec.inlang",
     "preview": "vite preview",
+    "test": "playwright test",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check . && eslint . && npx @inlang/cli lint --project ./tnfshcec.inlang",
@@ -18,6 +19,7 @@
     "@inlang/paraglide-js-adapter-sveltekit": "^0.5.5",
     "@melt-ui/pp": "^0.3.0",
     "@melt-ui/svelte": "^0.74.4",
+    "@playwright/test": "^1.42.1",
     "@shikijs/transformers": "^1.1.1",
     "@shikijs/twoslash": "^1.1.0",
     "@sveltejs/adapter-static": "^3.0.1",
