--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   workflow_run:
-    workflows: ["Build project"]
+    workflows: ["Playwright Tests"]
     branches: [main]
     types: [completed]
 
@@ -25,7 +25,7 @@ jobs:
 
       - name: build
         env:
-          ORIGIN: "https://tnfshcec.com"
+          ORIGIN: "https://www.tnfshcec.com"
           # BASE_PATH: "/${{ github.event.repository.name }}"
         run: |
           npm run build
