--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prettier-plugin-tailwindcss": "^0.5.4",
     "prism-themes": "^1.9.0",
     "rehype-external-links": "^3.0.0",
+    "rehype-slug": "^6.0.0",
     "remark-footnotes": "^4.0.1",
     "shiki": "^1.1.0",
     "svelte": "^4.2.3",
