use vaul-svelte for mobile drawer
* replaced dropdown with a drawer
* added post list, CTF links
* removed some global style

--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
   "type": "module",
   "trustedDependencies": [
     "svelte-preprocess"
-  ]
+  ],
+  "dependencies": {
+    "vaul-svelte": "^0.3.0"
+  }
 }
