--- a/package.json
+++ b/package.json
@@ -27,15 +27,14 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/eslint": "^8.56.7",
     "@types/node": "^20.12.2",
     "@types/thunky": "^1.1.0",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
     "autoprefixer": "^10.4.14",
     "bits-ui": "^0.21.1",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-svelte": "^2.35.0",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.36.0",
     "mdsvex": "^0.11.0",
     "mode-watcher": "^0.3.0",
     "postcss": "^8.4.23",
@@ -56,6 +55,7 @@
     "tailwindcss": "^3.3.1",
     "tslib": "^2.4.1",
     "typescript": "^5.4.3",
+    "typescript-eslint": "^8.0.0-alpha.20",
     "unist-util-visit": "^5.0.0",
     "unplugin-icons": "^0.18.1",
     "vaul-svelte": "^0.3.0",
