--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
     "vaul-svelte": "^0.3.0",
     "vite": "^5.3.1"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "just-extend": "^6.2.0"
+  }
 }
