--- a/package.json
+++ b/package.json
@@ -15,40 +15,39 @@
   },
   "devDependencies": {
     "@iconify-json/mdi": "^1.1.54",
-    "@inlang/paraglide-js": "1.11.0",
-    "@inlang/paraglide-js-adapter-sveltekit": "^0.6.7",
+    "@inlang/paraglide-sveltekit": "^0.15.5",
     "@melt-ui/pp": "^0.3.0",
-    "@melt-ui/svelte": "^0.83.0",
+    "@melt-ui/svelte": "^0.86.0",
     "@playwright/test": "^1.45.0",
     "@shikijs/transformers": "^1.12.1",
     "@sveltejs/adapter-static": "^3.0.1",
-    "@sveltejs/kit": "^2.3.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@sveltejs/kit": "^2.5.27",
+    "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.9",
     "@types/eslint": "^9.6.0",
     "@types/node": "^22.0.2",
     "@types/thunky": "^1.1.0",
     "autoprefixer": "^10.4.14",
-    "bits-ui": "^0.21.1",
+    "bits-ui": "^1.0.0-next.78",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.43.0",
+    "eslint-plugin-svelte": "^2.45.1",
     "mdsvex": "^0.11.0",
     "mode-watcher": "^0.4.1",
     "postcss": "^8.4.23",
     "postcss-load-config": "^6.0.1",
     "prettier": "^3.2.4",
-    "prettier-plugin-svelte": "^3.2.2",
+    "prettier-plugin-svelte": "^3.2.6",
     "prettier-plugin-tailwindcss": "^0.6.4",
     "prism-themes": "^1.9.0",
     "rehype-external-links": "^3.0.0",
     "rehype-slug": "^6.0.0",
     "remark-footnotes": "^4.0.1",
     "shiki": "^1.1.0",
-    "svelte": "^4.2.3",
-    "svelte-check": "^3.6.0",
-    "svelte-meta-tags": "^3.1.0",
+    "svelte": "^5.0.0",
+    "svelte-check": "^4.0.0",
+    "svelte-meta-tags": "^4.1.0",
     "svelte-preprocess": "^6.0.1",
     "svelte-sequential-preprocessor": "^2.0.1",
     "tailwindcss": "^3.3.1",
@@ -57,8 +56,8 @@
     "typescript-eslint": "^8.0.0-alpha.20",
     "unist-util-visit": "^5.0.0",
     "unplugin-icons": "^0.19.0",
-    "vaul-svelte": "^0.3.0",
-    "vite": "^5.3.1"
+    "vaul-svelte": "^1.0.0-next.3",
+    "vite": "^6.0.0"
   },
   "type": "module",
   "dependencies": {
