--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.5.27",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
-    "@tailwindcss/forms": "^0.5.4",
     "@tailwindcss/typography": "^0.5.9",
     "@types/eslint": "^9.6.0",
     "@types/node": "^22.0.2",
-    "@types/thunky": "^1.1.0",
     "autoprefixer": "^10.4.14",
     "bits-ui": "^1.0.0-next.78",
     "eslint": "^9.8.0",
@@ -40,10 +38,9 @@
     "prettier": "^3.2.4",
     "prettier-plugin-svelte": "^3.2.6",
     "prettier-plugin-tailwindcss": "^0.6.4",
-    "prism-themes": "^1.9.0",
     "rehype-external-links": "^3.0.0",
     "rehype-slug": "^6.0.0",
-    "remark-footnotes": "^4.0.1",
+    "remark-gfm": "^4.0.0",
     "shiki": "^1.1.0",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
@@ -55,7 +52,7 @@
     "typescript": "^5.5.2",
     "typescript-eslint": "^8.0.0-alpha.20",
     "unist-util-visit": "^5.0.0",
-    "unplugin-icons": "^0.19.0",
+    "unplugin-icons": "^22.0.0",
     "vaul-svelte": "^1.0.0-next.3",
     "vite": "^6.0.0"
   },
