--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "playwright test",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --check . && eslint . && npx @inlang/cli lint --project ./tnfshcec.inlang",
+    "lint": "prettier --check . && npx @inlang/cli lint --project ./tnfshcec.inlang",
     "format": "prettier --write ."
   },
   "devDependencies": {
@@ -24,13 +24,9 @@
     "@sveltejs/kit": "^2.5.27",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/eslint": "^9.6.0",
     "@types/node": "^22.0.2",
     "autoprefixer": "^10.4.14",
     "bits-ui": "^1.0.0-next.78",
-    "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.45.1",
     "mdsvex": "^0.11.0",
     "mode-watcher": "^0.4.1",
     "postcss": "^8.4.23",
@@ -50,7 +46,6 @@
     "tailwindcss": "^3.3.1",
     "tslib": "^2.4.1",
     "typescript": "^5.5.2",
-    "typescript-eslint": "^8.0.0-alpha.20",
     "unist-util-visit": "^5.0.0",
     "unplugin-icons": "^22.0.0",
     "vaul-svelte": "^1.0.0-next.3",
